<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eletric_car"
        android:layout_margin="24dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carros"
        android:layout_margin="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_carros"
        app:layout_constraintTop_toTopOf="@id/tv_carros"/>


    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_carros"
        app:layout_constraintLeft_toLeftOf="@id/tv_titulo"
        android:src="@drawable/carro_eletrico"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_preço"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/preco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_image"/>

    <TextView
        android:id="@+id/tv_preço_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 300,000.00"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_preço"
        app:layout_constraintTop_toBottomOf="@id/iv_image"/>

    <TextView
        android:id="@+id/tv_bateria"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/bateria"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_preço"/>

    <TextView
        android:id="@+id/tv_bateria_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 300kWh"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_bateria"
        app:layout_constraintTop_toTopOf="@id/tv_bateria"/>

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/potencia"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/potencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300cv"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_potencia"
        app:layout_constraintTop_toTopOf="@id/tv_potencia"/>

    <TextView
        android:id="@+id/tv_recarga"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/recarga"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_recarga_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23 min"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_bateria"
        app:layout_constraintTop_toTopOf="@id/tv_recarga"/>

    <EditText
        android:id="@+id/et_preço_kWh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="16dp"
        android:hint="@string/preco_kwh"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recarga_value"/>

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/km_percorrido"
        android:maxLength="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@id/et_preço_kWh"
        app:layout_constraintStart_toStartOf="@id/et_preço_kWh"
        app:layout_constraintTop_toBottomOf="@id/et_preço_kWh"
        android:autofillHints="0" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="@id/et_km_percorrido"
        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido" />

    <TextView
        android:id="@+id/tv_Resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBottomOf="@id/btn_calcular"
        app:layout_constraintEnd_toEndOf="@id/btn_calcular"
        app:layout_constraintStart_toStartOf="@id/btn_calcular"/>


</androidx.constraintlayout.widget.ConstraintLayout>